--- a/src/test/resources/remote.properties
+++ b/src/test/resources/remote.properties
@@ -6,5 +6,4 @@ os_version=9.0
 project=First Java Project
 build=browserstack-build-1
 name=first_test
-//remoteUrl=http://hub.browserstack.com/wd/hub
-remoteUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub
+remoteUrl=http://hub.browserstack.com/wd/hub
